testsuite/tests/properties/invalid_new_node/common.lkt
from lexer_example import foo_lexer
from test import LiteralList

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- list_rule
    list_rule <- pick("(" list+(list_item, ",") ")")
    list_item <- Literal(@Number)
}

class FooNode implements Node[FooNode] {
}

class Literal: FooNode implements TokenNode {
}

@synthetic class EmptyNode: FooNode {
}
